--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,10 @@ dependencies:
   google_fonts: ^3.0.1
   english_words: ^4.0.0
   dropdown_button2: ^1.9.2
-  firebase_core: ^2.4.1
+  firebase_core:
   cloud_firestore: ^4.3.1
   lottie: ^2.1.0
+  awesome_snackbar_content: 
 
 
 dev_dependencies:
