--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  
+  multi_select_flutter: 
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
   english_words: ^4.0.0
