--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,13 @@ dependencies:
   english_words: ^4.0.0
   dropdown_button2: ^1.9.2
   firebase_core:
+  firebase_core_web:
   cloud_firestore: ^4.3.1
   lottie: ^2.1.0
   awesome_snackbar_content:
+  firebase_auth:
+  font_awesome_flutter:
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +65,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - background.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -96,6 +102,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-assets:
-  - assets/
-  - assets/kvakic.json
